# AI_MCP_AGENTS

./: README.md
backend/: README.md  main.py  pyproject.toml  requirements.txt
frontend/chats/: index.html  package-lock.json  package.json
